Fix up figure spacing.

--- a/css/base.css
+++ b/css/base.css
@@ -229,7 +229,7 @@ h4{
 }
 
 .figure{
-  margin:19px 0 1em 0;
+  margin:19px 0 19px 0;
   padding:2px;
   text-align:center;
   border:1px solid #ddd;
